--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
+    "remixicon": "^4.6.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
